--- a/Sarrafi/Base.lproj/Main.storyboard
+++ b/Sarrafi/Base.lproj/Main.storyboard
@@ -58,7 +58,7 @@
                                                                     <color key="textColor" white="1" alpha="0.80000000000000004" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="۰ ریال" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lxi-i3-B3E">
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="۰ ریال" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lxi-i3-B3E">
                                                                     <rect key="frame" x="0.0" y="34" width="125" height="26.5"/>
                                                                     <fontDescription key="fontDescription" name="Shabnam-Medium-FD" family="Shabnam FD" pointSize="18"/>
                                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -73,7 +73,7 @@
                                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="۰٪" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tTM-Za-Rap">
                                                                                     <rect key="frame" x="0.0" y="0.0" width="13" height="25.5"/>
                                                                                     <fontDescription key="fontDescription" name="Shabnam-Light-FD" family="Shabnam FD" pointSize="13"/>
-                                                                                    <color key="textColor" white="1" alpha="0.55000000000000004" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                                    <color key="textColor" white="1" alpha="0.65000000000000002" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                     <nil key="highlightedColor"/>
                                                                                 </label>
                                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_arrow_up" translatesAutoresizingMaskIntoConstraints="NO" id="NT9-8V-1vc">
@@ -84,7 +84,7 @@
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="۰۰:۰۰:۰۰" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="7" translatesAutoresizingMaskIntoConstraints="NO" id="tTX-RK-OV5">
                                                                             <rect key="frame" x="81.5" y="0.0" width="43.5" height="25.5"/>
                                                                             <fontDescription key="fontDescription" name="Shabnam-Light-FD" family="Shabnam FD" pointSize="13"/>
-                                                                            <color key="textColor" white="1" alpha="0.54987157529999997" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                            <color key="textColor" white="1" alpha="0.65000000000000002" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
                                                                     </subviews>
@@ -135,51 +135,70 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="4J8-fG-0I9"/>
                                 </connections>
                             </collectionView>
-                            <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="6Dx-pz-dSe">
-                                <rect key="frame" x="124.5" y="236" width="71" height="52"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="6Dx-pz-dSe">
+                                <rect key="frame" x="16" y="136" width="288" height="252"/>
                                 <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ldo-as-xYf" customClass="AnimationView" customModule="Lottie">
+                                        <rect key="frame" x="0.0" y="0.0" width="288" height="200"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="200" id="sAg-DA-i8u"/>
+                                        </constraints>
+                                    </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="متن" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="08W-WX-jsu">
-                                        <rect key="frame" x="0.0" y="0.0" width="71" height="20"/>
+                                        <rect key="frame" x="0.0" y="200" width="288" height="20"/>
                                         <fontDescription key="fontDescription" name="Shabnam-FD" family="Shabnam FD" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ulH-uC-ZLf">
-                                        <rect key="frame" x="0.0" y="20" width="71" height="32"/>
+                                        <rect key="frame" x="0.0" y="220" width="288" height="32"/>
                                         <fontDescription key="fontDescription" name="Shabnam-FD" family="Shabnam FD" pointSize="17"/>
                                         <state key="normal" title="تلاش دوباره"/>
+                                        <connections>
+                                            <action selector="tryAgainPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="81z-6H-KQB"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="6i1-wi-wPd">
-                                <rect key="frame" x="141.5" y="243.5" width="37" height="37"/>
-                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" name="BackgroundColor"/>
                         <constraints>
                             <constraint firstItem="LIr-cl-yO2" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="7sM-LI-vZo"/>
                             <constraint firstItem="6Dx-pz-dSe" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8FU-Ee-HKG"/>
-                            <constraint firstItem="6i1-wi-wPd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Jhh-1B-DuE"/>
                             <constraint firstItem="LIr-cl-yO2" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="O3x-mV-89D"/>
                             <constraint firstItem="6Dx-pz-dSe" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="mEv-WL-lxl"/>
                             <constraint firstItem="LIr-cl-yO2" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="sX8-HB-ped"/>
                             <constraint firstItem="LIr-cl-yO2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="wgQ-PC-Kcp"/>
-                            <constraint firstItem="6i1-wi-wPd" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="z47-2y-7kF"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" title="صرافی" id="NSQ-jO-aGA"/>
                     <connections>
-                        <outlet property="activityIndicator" destination="6i1-wi-wPd" id="rhL-fO-zmU"/>
                         <outlet property="currencyCollection" destination="LIr-cl-yO2" id="Woc-1v-EpF"/>
                         <outlet property="emptyStateButton" destination="ulH-uC-ZLf" id="1IZ-iS-dRn"/>
                         <outlet property="emptyStateLabel" destination="08W-WX-jsu" id="Uw1-Q6-5LW"/>
+                        <outlet property="emptyStateLottie" destination="ldo-as-xYf" id="Fh2-j2-daN"/>
                         <outlet property="emptyStateStackView" destination="6Dx-pz-dSe" id="N7P-fo-dqF"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3127.5" y="-730.9859154929577"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="xbn-cA-yVg">
+            <objects>
+                <viewController storyboardIdentifier="detail_vc" id="6Uv-q1-SbG" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bL3-Yr-YS2">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" name="BackgroundColor"/>
+                        <viewLayoutGuide key="safeArea" id="O8o-Cl-Xbg"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="R0G-hv-ogp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4140" y="-731"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="fAy-ty-ANd">
