--- a/Sarrafi/Base.lproj/Main.storyboard
+++ b/Sarrafi/Base.lproj/Main.storyboard
@@ -220,7 +220,7 @@
                                                     <segment title="ماهانه"/>
                                                     <segment title="۳ ماهه"/>
                                                     <segment title="۶ ماهه"/>
-                                                    <segment title="تحولات کلی"/>
+                                                    <segment title="همه"/>
                                                 </segments>
                                                 <connections>
                                                     <action selector="filterIndexChanged:" destination="6Uv-q1-SbG" eventType="valueChanged" id="YOK-6P-hK7"/>
@@ -450,7 +450,7 @@
         <image name="ic_price_down" width="25" height="25"/>
         <image name="ic_price_up" width="25" height="25"/>
         <namedColor name="Accent">
-            <color red="0.23100000619888306" green="0.52499997615814209" blue="0.81199997663497925" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.1764705882352941" green="0.54509803921568623" blue="0.94901960784313721" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="BackgroundColor">
             <color red="0.92941176470588238" green="0.94901960784313721" blue="0.98431372549019602" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
